--- a/Meet-4/page02B.html
+++ b/Meet-4/page02B.html
@@ -1,120 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1 style="font-family : Times New Roman">Education and Skills</h1>
-    <table style="padding-left : 40px">
-        <caption style="text-align: left; padding-left: 40px;">NVQ Qualification in UK Core Cities</caption>
-        <thead>
-            <tr>
-             <th rowspan="2">City</th>
-             <th colspan="2">NVQ4</th>
-             <th colspan="2">NVQ3</th>
-             <th colspan="2">NVQ2</th>
-            </tr>
-            <tr>
-             <th>Count</th>
-             <th>% Rate</th>
-             <th>Count</th>
-             <th>% Rate</th>
-             <th>Count</th>
-             <th>% Rate</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>   
-            <td style="font-weight: bold; text-align: center;">Birmingham</td>
-            <td>241,900</td> <td>33.2</td>
-            <td>379,900</td> <td>52.2</td>
-            <td>497,100</td> <td>68.3</td>
-           </tr>
-           <tr>
-            <td style="font-weight: bold; text-align: center;">Bristol</td>
-            <td>155,900</td> <td>49.3</td>
-            <td>216,300</td> <td>68.5</td>
-            <td>256,300</td> <td>81.1</td>
-           </tr>
-           <tr>
-            <td style="font-weight: bold; text-align: center;">Cardiff</td>
-            <td>114,600</td> <td>46.8</td>
-            <td>160,400</td> <td>65.5</td>
-            <td>196,400</td> <td>80.2</td>
-           </tr>
-           <tr>
-            <td style="font-weight: bold; text-align: center;">Glasgow</td>
-            <td>197,100</td> <td>45,9</td>
-            <td>249,600</td> <td>58.1</td>
-            <td>297,000</td> <td>69.1</td>
-           </tr>
-           <tr>
-            <td style="font-weight: bold; text-align: center;">Leeds</td>
-            <td>197,600</td> <td>38.2</td>
-            <td>301,100</td> <td>58.3</td>
-            <td>392,800</td> <td>76.0</td>
-           </tr>
-           <tr>
-            <td style="font-weight: bold; text-align: center;">Liverpool</td>
-            <td>124,800</td> <td>37.5</td>
-            <td>186,700</td> <td>56.1</td>
-            <td>247,300</td> <td>74.3</td>
-           </tr>
-           <tr>
-            <td style="font-weight: bold; text-align: center;">Manchester</td>
-            <td>169,800</td> <td>44.1</td>
-            <td>232,600</td> <td>60.4</td>
-            <td>279,800</td> <td>72.7</td>
-           </tr>
-           <tr>
-            <td style="font-weight: bold; text-align: center;">Newcastle</td>
-            <td>80,600</td> <td>40,5</td>
-            <td>121,800</td> <td>61.3</td>
-            <td>155,700</td> <td>78.3</td>
-           </tr>
-           <tr>
-            <td style="font-weight: bold; text-align: center;">Nottingham</td>
-            <td>70,200</td> <td>31.2</td>
-            <td>125,000</td> <td>55.7</td>
-            <td>156,900</td> <td>69.9</td>
-           </tr>
-           <tr>
-            <td style="font-weight: bold; text-align: center;">Sheffield</td>
-            <td>166,800</td> <td>44.1</td>
-            <td>249,900</td> <td>66.1</td>
-            <td>298,900</td> <td>79.0</td>
-           </tr>
-        </tbody>
+  </head>
+  <body>
+    <h1 style="font-family: Times New Roman">Education and Skills</h1>
+    <table style="padding-left: 40px">
+      <caption style="text-align: left; padding-left: 40px">
+        NVQ Qualification in UK Core Cities
+      </caption>
+      <thead>
+        <tr>
+          <th rowspan="2">City</th>
+          <th colspan="2">NVQ4</th>
+          <th colspan="2">NVQ3</th>
+          <th colspan="2">NVQ2</th>
+        </tr>
+        <tr>
+          <th>Count</th>
+          <th>% Rate</th>
+          <th>Count</th>
+          <th>% Rate</th>
+          <th>Count</th>
+          <th>% Rate</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td style="font-weight: bold; text-align: center">Birmingham</td>
+          <td>241,900</td>
+          <td>33.2</td>
+          <td>379,900</td>
+          <td>52.2</td>
+          <td>497,100</td>
+          <td>68.3</td>
+        </tr>
+        <tr>
+          <td style="font-weight: bold; text-align: center">Bristol</td>
+          <td>155,900</td>
+          <td>49.3</td>
+          <td>216,300</td>
+          <td>68.5</td>
+          <td>256,300</td>
+          <td>81.1</td>
+        </tr>
+        <tr>
+          <td style="font-weight: bold; text-align: center">Cardiff</td>
+          <td>114,600</td>
+          <td>46.8</td>
+          <td>160,400</td>
+          <td>65.5</td>
+          <td>196,400</td>
+          <td>80.2</td>
+        </tr>
+        <tr>
+          <td style="font-weight: bold; text-align: center">Glasgow</td>
+          <td>197,100</td>
+          <td>45,9</td>
+          <td>249,600</td>
+          <td>58.1</td>
+          <td>297,000</td>
+          <td>69.1</td>
+        </tr>
+        <tr>
+          <td style="font-weight: bold; text-align: center">Leeds</td>
+          <td>197,600</td>
+          <td>38.2</td>
+          <td>301,100</td>
+          <td>58.3</td>
+          <td>392,800</td>
+          <td>76.0</td>
+        </tr>
+        <tr>
+          <td style="font-weight: bold; text-align: center">Liverpool</td>
+          <td>124,800</td>
+          <td>37.5</td>
+          <td>186,700</td>
+          <td>56.1</td>
+          <td>247,300</td>
+          <td>74.3</td>
+        </tr>
+        <tr>
+          <td style="font-weight: bold; text-align: center">Manchester</td>
+          <td>169,800</td>
+          <td>44.1</td>
+          <td>232,600</td>
+          <td>60.4</td>
+          <td>279,800</td>
+          <td>72.7</td>
+        </tr>
+        <tr>
+          <td style="font-weight: bold; text-align: center">Newcastle</td>
+          <td>80,600</td>
+          <td>40,5</td>
+          <td>121,800</td>
+          <td>61.3</td>
+          <td>155,700</td>
+          <td>78.3</td>
+        </tr>
+        <tr>
+          <td style="font-weight: bold; text-align: center">Nottingham</td>
+          <td>70,200</td>
+          <td>31.2</td>
+          <td>125,000</td>
+          <td>55.7</td>
+          <td>156,900</td>
+          <td>69.9</td>
+        </tr>
+        <tr>
+          <td style="font-weight: bold; text-align: center">Sheffield</td>
+          <td>166,800</td>
+          <td>44.1</td>
+          <td>249,900</td>
+          <td>66.1</td>
+          <td>298,900</td>
+          <td>79.0</td>
+        </tr>
+      </tbody>
     </table>
-    <br>
-    <table style="padding-left : 40px">
-        <tbody>
-            <tr>
-                <td>NVQ4</td>
-            </tr>
-            <tr>
-                <td style="padding-left : 40px">HND, Degree and Higher Degree level qualification</td>
-            </tr>
-            <tr>
-                <td>NVQ3</td>
-            </tr>
-            <tr>
-                <td style="padding-left : 40px">2 or more A levels, or equivalent</td>
-            </tr>
-            <tr>
-                <td>NVQ2</td>
-            </tr>
-            <tr>
-                <td style="padding-left : 40px">5 or more GCSEs at grades A-C, or equivalent</td>
-            </tr>
-        </tbody>
-     </table>
-     <footer>
-        <hr>
-        <p>Created by Muhammad Julian Firdaus (222112217@stis.ac.id)</p>
-     </footer>
-</body>
+    <br />
+    <br />
+    <p style="text-indent: 40px; line-height: 0px">NVQ4</p>
+    <p style="text-indent: 80px; line-height: 0px">
+      HND, Degree and Higher Degree level qualification
+    </p>
+    <p style="text-indent: 40px; line-height: 0px">NVQ3</p>
+    <p style="text-indent: 80px; line-height: 0px">
+      2 or more A levels, or equivalent
+    </p>
+    <p style="text-indent: 40px; line-height: 0px">NVQ2</p>
+    <p style="text-indent: 80px; line-height: 0px">
+      5 or more GCSEs at grades A-C, or equivalent
+    </p>
+    <footer>
+      <hr />
+      <p>Created by Muhammad Julian Firdaus (222112217@stis.ac.id)</p>
+    </footer>
+  </body>
 </html>
