--- a/Meet-4/page02B.html
+++ b/Meet-4/page02B.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 style="font-family: Times New Roman">Education and Skills</h1>
-    <table style="padding-left: 40px">
+    <table style="margin-left: 40px">
       <caption style="text-align: left; padding-left: 40px">
         NVQ Qualification in UK Core Cities
       </caption>
@@ -121,22 +121,18 @@
         </tr>
       </tbody>
     </table>
-    <br />
-    <br />
-    <p style="text-indent: 40px; line-height: 0px">NVQ4</p>
-    <p style="text-indent: 80px; line-height: 0px">
-      HND, Degree and Higher Degree level qualification
-    </p>
-    <p style="text-indent: 40px; line-height: 0px">NVQ3</p>
-    <p style="text-indent: 80px; line-height: 0px">
-      2 or more A levels, or equivalent
-    </p>
-    <p style="text-indent: 40px; line-height: 0px">NVQ2</p>
-    <p style="text-indent: 80px; line-height: 0px">
-      5 or more GCSEs at grades A-C, or equivalent
-    </p>
+
+    <dl style="margin-left : 40px">
+      <dt>NVQ4</dt>
+        <dd>HND, Degree and Higher Degree level qualification</dd>
+      <dt>NVQ3</dt>
+        <dd>2 or more A levels, or equivalent</dd>
+      <dt>NVQ2</dt>
+        <dd>5 or more GCSEs at grades A-C, or equivalent</dd>
+    </dl>
+
     <footer>
-      <hr />
+      <hr/>
       <p>Created by Muhammad Julian Firdaus (222112217@stis.ac.id)</p>
     </footer>
   </body>
