--- a/Meet-4/page03C.html
+++ b/Meet-4/page03C.html
@@ -40,18 +40,17 @@
             content: ":";
         }
         dd {
+            margin-left: 64.9px;
             padding: 0 2em;
             background-color: lightyellow;
-            position: relative;
             left: 2em;
-            margin-left: 27px;
         }
-
+        
     </style>        
 </head>
 <body>
     <h1 style="font-family : Times New Roman">Education and Skills</h1>
-    <table style="padding-left: 40px" id="data-table">
+    <table style="margin-left: 40px" id="data-table">
         <caption style="font-weight: bold; margin: 1ex;">NVQ Qualification in UK Core Cities</caption>
         <thead>
             <tr>
@@ -132,7 +131,7 @@
            </tr>
         </tbody>
     </table>
-    <dl>
+    <dl style="margin-left : 40px">
         <dt>NVQ4</dt>
         <dd>HND, Degree and Higher Degree level qualification</dd>
         <dt>NVQ3</dt>
